# windows-deps

./: BuildAll.bat
src/osl/src/cmake/: externalpackages.cmake
src/osl/src/liboslnoise/: CMakeLists.txt
src/osl/src/testrender/: CMakeLists.txt
src/osl/src/testshade/: CMakeLists.txt
